# SWAT

./: .gitignore  .readthedocs.yaml  NOTICE.txt  README.md  README.rst  config.yaml  pyproject.toml  requirements.txt  setup.py  token.pickle
.github/ISSUE_TEMPLATE/: bug_report.md  command_feature_request.md  feature_request.md  maintenance.md  module_feature_request.md  other.md
.github/workflows/: run_pytest.yml
docs/: CHANGELOG.rst  Makefile  README.rst  auth.rst  commands.rst  conf.py  contributing.rst  developers.rst  emulations.rst  getting_started.rst  how_to_guides.rst  index.rst  logging.rst  make.bat  prerequisites.rst  requirements.txt
swat/: .gitignore  attack.py  base.py  coverage.py  google_auth.py  logger.py  main.py  misc.py  mixins.py  setup.py  shell.py  sim.py  utils.py
swat/commands/: audit.py  auth.py  authenticate.py  base_command.py  coverage.py  creds.py  data.py  emulate.py  scopes.py  sim.py
swat/commands/initial_access/: t1566_002.py  t1566_002.yaml
swat/commands/persistence/: T1098.py  t1098_003.py  t1098_003.yaml  t1136.py  t1136.yaml
swat/emulations/: base_emulation.py
swat/emulations/collection/: drive_access_private_keys.py
swat/emulations/initial_access/: gmail_html_with_embedded_js.py  gmail_pdf_with_embedded_javascript.py  gmail_phishing_form_link.py  gmail_phishing_form_link.yaml
swat/emulations/persistence/: add_creds.py  add_roles.py  (+6 more)
swat/etc/: config.yaml
swat/swat/: main.py
swat/tango/: README.md
swot/: setup.py
swot/swot/: google_auth.py  main.py
tango/: README.md
tests/: test_emulations.py
(+4 files in other folders)
